# RNGD-TCP-Kernel-Dev

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: constant_add.rs  dot_product.rs  elementwise_mul.rs  gemm.rs  gemv.rs  lib.rs  pilot_add_f32.rs  pilot_batch_gemm.rs  pilot_e2e_add.rs  pilot_e2e_batch_gemm.rs  pilot_e2e_cos.rs  pilot_e2e_div.rs  pilot_e2e_dot_product.rs  pilot_e2e_exp.rs  pilot_e2e_gelu.rs  pilot_e2e_gemm.rs  pilot_e2e_gemv.rs  pilot_e2e_log.rs  pilot_e2e_mul.rs  pilot_e2e_pow2.rs  pilot_e2e_rsqrt.rs  pilot_e2e_sigmoid.rs  pilot_e2e_silu.rs  pilot_e2e_sin.rs  pilot_e2e_sqrt.rs  pilot_e2e_sub.rs  pilot_e2e_tanh.rs  pilot_e2e_transpose.rs  reference_data_e2e_add.rs  reference_data_e2e_batch_gemm.rs  reference_data_e2e_cos.rs  reference_data_e2e_div.rs  reference_data_e2e_dot_product.rs  reference_data_e2e_exp.rs  reference_data_e2e_gelu.rs  reference_data_e2e_gemm.rs  reference_data_e2e_log.rs  reference_data_e2e_mul.rs  reference_data_e2e_pow2.rs  reference_data_e2e_rsqrt.rs  (+8 more)
src/kernel/: constant_add_kernel.rs  dot_product_kernel.rs  elementwise_mul_kernel.rs  gemm_kernel.rs  gemv_kernel.rs  mod.rs  pilot_add_f32_kernel.rs  pilot_batch_gemm_kernel.rs  pilot_e2e_add_kernel.rs  pilot_e2e_batch_gemm_kernel.rs  pilot_e2e_cos_kernel.rs  pilot_e2e_div_kernel.rs  pilot_e2e_dot_product_kernel.rs  pilot_e2e_exp_kernel.rs  pilot_e2e_gelu_kernel.rs  pilot_e2e_gemm_kernel.rs  pilot_e2e_gemv_kernel.rs  pilot_e2e_log_kernel.rs  pilot_e2e_mul_kernel.rs  pilot_e2e_pow2_kernel.rs  pilot_e2e_rsqrt_kernel.rs  pilot_e2e_sigmoid_kernel.rs  pilot_e2e_silu_kernel.rs  pilot_e2e_sin_kernel.rs  pilot_e2e_sqrt_kernel.rs  pilot_e2e_sub_kernel.rs  pilot_e2e_tanh_kernel.rs  pilot_e2e_transpose_kernel.rs
